add new work experiences as Ice Hockey Official and NIRSA Flag Football Editorial Board member, detailing roles and responsibilities

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -172,6 +172,37 @@
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
+          <!-- START: Ice Hockey Official -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Ice Hockey Official</p>
+                <a href="https://www.usahockey.com/" target="_blank" class="italic">USA Hockey (Contract)</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">January 2023 - July 2024</p>
+                <p class="xs:hidden">Jan. '23 - Jul. '24</p>
+                <p>Orange County, CA</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li
+                >Officiated adult men's, women's, and co-rec leagues alongside Southern California Amateur Hockey Association (<a
+                  href="https://www.scaha.com/"
+                  target="_blank"
+                  >SCAHA</a
+                >), California Amateur Hockey Association (<a href="https://www.caha.com/" target="_blank">CAHA</a>), JV/Varsity high school, and
+                youth travel hockey assignments across Southern California</li
+              >
+              <li
+                >Rotated through rinks in Orange, Los Angeles, and Riverside counties, ensuring consistent rule enforcement while maintaining the
+                safety of the players</li
+              >
+              <li>Officiated multi-game holiday tournaments, skating up to 21 games over extended weekends to sustain event cadence</li>
+              <li>Utilized calm communication and deep rule knowledge to diffuse disputes and maintain player and spectator civility</li>
+            </ul>
+          </div>
+          <!-- END: Ice Hockey Official -->
           <!-- START: Intramural Sports Supervisor -->
           <div class="hidden flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -246,6 +277,35 @@
       <section id="organizations">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase">Organizations</h2>
         <div class="flex flex-col gap-y-1.5">
+          <!-- START: NIRSA Flag Football Editorial Board -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Student Member, Flag Football Editorial Board</p>
+                <a href="https://play.nirsa.net/flag-football/editorial-board/" target="_blank" class="italic">NIRSA Championship Series</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2025 - Present</p>
+                <p class="xs:hidden">Aug. '25 - Pres.</p>
+                <p>Remote</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li
+                >Update the NIRSA Flag & Touch Football Rules Book and Officials’ Manual to provide clear mechanics and consistent interpretations
+                across tournaments</li
+              >
+              <li
+                >Collaborate with a 12-member editorial board to revise clinician resources and align biennial rule changes with Championship Series
+                priorities</li
+              >
+              <li
+                >Coordinate with the Champ Series work team to ensure the clinician kit and online officials’ training course reflect the latest
+                editorial guidance</li
+              >
+            </ul>
+          </div>
+          <!-- END: NIRSA Flag Football Editorial Board -->
           <!-- START: Region VI Southern California Student Leader -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -260,8 +320,18 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Prepare the NIRSA Region VI Student LeadOn</li>
-              <li>Connect with other state student leaders monthly on important NIRSA matters</li>
+              <li
+                >Orchestrated the Region VI Student LeadOn by shaping the agenda, recruiting presenters, and aligning logistics with the host
+                campus</li
+              >
+              <li
+                >Facilitated monthly strategy briefings with state student leaders to surface campus recreation challenges and present actionable
+                updates to the regional board</li
+              >
+              <li
+                >Partnered with peers across Region VI to exchange engagement ideas that elevated member involvement in conferences, committees, and
+                regional tournaments</li
+              >
             </ul>
           </div>
           <!-- END: Region VI Southern California Student Leader -->
