refine work experience section by enhancing descriptions of roles and responsibilities, ensuring clarity and impact; update timeline formatting for consistency

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -157,18 +157,24 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <!-- <li>Manage a staff of approximately 40 student officials and attendants</li> -->
-              <li>
-                <span>Scheduled staff and league games using</span>
-                <a href="https://www.subitup.com/" target="_blank">SubItUp</a>
-                <span>and</span>
-                <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a>
-                <span>respectively</span>
-              </li>
-              <li>Updated staff handbook, sports rules documents, and employee policies & procedures</li>
-              <li>Interviewed and hire candidates as well as lead new-hire trainings</li>
-              <li>Tabled, marketed, and promoted intramural sports to the student body</li>
-              <li>Conducted semesterly captains' meetings and regular all-staff/sport-specific meetings</li>
+              <li
+                >Coordinated all league and event timelines through <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a> and scheduled
+                staff using <a href="https://www.subitup.com/" target="_blank">SubItUp</a>, ensuring 100% event coverage</li
+              >
+              <li>Revised and updated staff handbooks, sports rules, and policies to drive departmental compliance and operational consistency</li>
+              <li>Conducted initial candidate interviews, participated in hiring decisions, and led new-hire training for all incoming staff</li>
+              <li
+                >Executed direct marketing and promotional campaigns, including managing informational tabling and developing outreach strategies, to
+                increase program visibility and participation</li
+              >
+              <li
+                >Led semesterly captains' meetings and facilitated regular all-staff and sport-specific team meetings to ensure consistent
+                departmental communication and policy adherence</li
+              >
+              <li
+                >Created and managed a successful semester-long weekly trivia league pilot program that was well-received by students and incorporated
+                into permanent programming</li
+              >
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
@@ -349,9 +355,20 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Planned and organized annual flag football retreats and clinics</li>
-              <li>Served as a clinician in both flag football and basketball clinics</li>
-              <li>Recorded notes during monthly meetings</li>
+              <li
+                >Planned and hosted the annual SCIOA retreat that centered campus conversations on intramural sports and mapped the goals for the
+                upcoming SCIOA Officials Clinic</li
+              >
+              <li
+                >Coordinated logistics, curriculum, and staffing for the officials clinic we produced for Southern California intramural
+                professionals</li
+              >
+              <li
+                >Served as a clinician for the SCIOA Officials Clinic, creating and leading advanced flag football sessions and beginner-track
+                basketball modules</li
+              >
+              <li>Captured comprehensive notes during bi-monthly association meetings and distributed recap emails to member institutions</li>
+              <li>Contributed ideas that advanced professional development topics shared among intramural programs in the region</li>
             </ul>
           </div>
           <!-- END: Secretary -->
@@ -624,8 +641,8 @@
                 </p>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">December 2022 - Present</p>
-                <p class="xs:hidden">Dec. '22 - Pres.</p>
+                <p class="hidden xs:inline">December 2022</p>
+                <p class="xs:hidden">Dec. '22</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
