add new jersey checkout workflow to work experience section, detailing inventory management and staff training for equipment handling

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -162,6 +162,10 @@
                 staff using <a href="https://www.subitup.com/" target="_blank">SubItUp</a>, ensuring 100% event coverage</li
               >
               <li>Revised and updated staff handbooks, sports rules, and policies to drive departmental compliance and operational consistency</li>
+              <li
+                >Implemented a new jersey checkout workflow in <a href="https://www.fusionfamily.com/fusion" target="_blank">Fusion</a> by cataloging
+                inventory and training staff on issuing and returning equipment to and from participants</li
+              >
               <li>Conducted initial candidate interviews, participated in hiring decisions, and led new-hire training for all incoming staff</li>
               <li
                 >Executed direct marketing and promotional campaigns, including managing informational tabling and developing outreach strategies, to
