refactor resume layout and content; update dimensions for improved formatting, enhance job descriptions for clarity, and add new role as Intramural Sports Official

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -12,14 +12,14 @@
   </head>
 
   <body
-    class="resume layout relative mx-auto h-full max-w-[750px] pb-80 pt-10 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
+    class="resume layout relative mx-auto h-full max-w-[780px] pb-80 pt-10 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
     <!-- START: Page -->
     <div class="flex flex-col gap-y-2 print:gap-y-[3px]">
       <!-- START: Header -->
       <section id="header" class="flex flex-col -space-y-0.5 text-center">
         <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
         <!-- <a href="https://maps.app.goo.gl/DJgoRCSzzX3QiRXs8" target="_blank" class="mx-auto">Anaheim, California 92806</a> -->
-        <a href="https://maps.app.goo.gl/ug4CTv5Vhko9y8Rv6" target="_blank" class="mx-auto">Oxford, Mississippi 38655</a>
+        <!-- <a href="https://maps.app.goo.gl/ug4CTv5Vhko9y8Rv6" target="_blank" class="mx-auto">Oxford, Mississippi 38655</a> -->
         <span class="mx-auto flex max-w-[600px] flex-row flex-wrap justify-around gap-x-1 print:max-w-none print:text-[11px] md:max-w-none">
           <!-- START: Cell Number -->
           <a href="tel:+16618033757" class="flex flex-row gap-x-1">
@@ -137,8 +137,8 @@
                 technical mechanics and rule knowledge</li
               >
               <li
-                >Facilitate monthly 15-minute professional development meetings with eight undergraduate student staff and conduct periodic
-                consultation meetings with assigned sport club officers</li
+                >Facilitate monthly professional development meetings with eight undergraduate student staff and conduct periodic consultation
+                meetings with assigned sport club officers</li
               >
             </ul>
           </div>
@@ -147,29 +147,35 @@
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
-                <p class="font-bold">Intramural Sports Lead / Official</p>
+                <p class="font-bold">Intramural Sports Lead</p>
                 <a href="https://asi.fullerton.edu/" target="_blank" class="italic">Cal Sate Fullerton, Associated Students Inc.</a>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">January 2022 - July 2024</p>
-                <p class="xs:hidden">Jan. '22 - Jul. '24</p>
+                <p class="hidden xs:inline">August 2022 - July 2024</p>
+                <p class="xs:hidden">Aug. '22 - Jul. '24</p>
                 <p>Fullerton, CA</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
               <li
-                >Coordinated all league and event timelines through <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a> and scheduled
-                staff using <a href="https://www.subitup.com/" target="_blank">SubItUp</a>, ensuring 100% event coverage</li
+                >Coordinated the flag football, basketball, soccer, volleyball, and softball leagues through
+                <a href="https://www.imleagues.com/" target="_blank">IMLeagues</a></li
               >
-              <li>Revised and updated staff handbooks, sports rules, and policies to drive departmental compliance and operational consistency</li>
+              <li>Scheduled intramural officials and attendants using <a href="https://www.subitup.com/" target="_blank">SubItUp</a></li>
               <li
                 >Implemented a new jersey checkout workflow in <a href="https://www.fusionfamily.com/fusion" target="_blank">Fusion</a> by cataloging
                 inventory and training staff on issuing and returning equipment to and from participants</li
               >
               <li>Conducted initial candidate interviews, participated in hiring decisions, and led new-hire training for all incoming staff</li>
+              <li>Revised and updated handbooks, sports rules, and policies to drive departmental compliance and operational consistency</li>
+              <li>Leveraged my Responding to Emergencies First Aid/CPR certification to deliver immediate care for injured participants</li>
               <li
                 >Executed direct marketing and promotional campaigns, including managing informational tabling and developing outreach strategies, to
                 increase program visibility and participation</li
+              >
+              <li
+                >Filed detailed, fact-based incident reports in <a href="https://www.connect2concepts.com/" target="_blank">Connect2</a> to document
+                injuries, facility issues, and behavioral concerns</li
               >
               <li
                 >Led semesterly captains' meetings and facilitated regular all-staff and sport-specific team meetings to ensure consistent
@@ -182,12 +188,31 @@
             </ul>
           </div>
           <!-- END: Intramural Sports Lead -->
+          <!-- START: Intramural Sports Official -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Intramural Sports Official</p>
+                <a href="https://asi.fullerton.edu/" target="_blank" class="italic">Cal Sate Fullerton, Associated Students Inc.</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">January 2022 - May 2022</p>
+                <p class="xs:hidden">Jan. '22 - May '22</p>
+                <p>Fullerton, CA</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li>Officiated intramural flag football, basketball, soccer, softball, volleyball, and ultimate contests</li>
+              <li>Mentored newly hired officials during on-court situations, reinforcing mechanics and rule knowledge in live-game settings</li>
+            </ul>
+          </div>
+          <!-- END: Intramural Sports Official -->
           <!-- START: Ice Hockey Official -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Ice Hockey Official</p>
-                <a href="https://www.usahockey.com/" target="_blank" class="italic">USA Hockey (Contract)</a>
+                <a href="https://lahoa.com/" target="_blank" class="italic">LAHOA, USA Hockey (Contract)</a>
               </div>
               <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">January 2023 - July 2024</p>
@@ -237,11 +262,11 @@
           </div>
           <!-- END: Intramural Sports Supervisor -->
           <!-- START: Residential Advisor -->
-          <div class="hidden flex-col gap-y-1">
+          <div class="flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Residential Advisor (RA)</p>
-                <a href="https://reslife.okstate.edu" target="_blank" class="italic">Housing and Residential Life</a>
+                <a href="https://reslife.okstate.edu" target="_blank" class="italic">Oklahoma State University, Housing and Residential Life</a>
               </div>
               <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2019 - March 2020</p>
@@ -250,10 +275,18 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Oversaw approximately 50 student residents in on-campus housing</li>
-              <li>Responded to urgent requests from residents and on-campus police while on-call at night</li>
-              <li>Defused chaotic situations involving &mdash; but not limited to &mdash; drugs, alcohol, and rowdy parties</li>
-              <li>Recounted in great detail incidents within the housing community for the purpose of filing reports</li>
+              <li>Supported 50 residents by coordinating move-ins, leading floor meetings, and mediating roommate conflicts</li>
+              <li>Served on nightly duty rotations and responded to urgent calls from residents and campus police</li>
+              <li
+                >Guided students through sensitive incidents involving drugs, alcohol, and loud gatherings by calmly de-escalating and connecting them
+                with campus resources</li
+              >
+              <li>Captured detailed, objective incident reports so professional staff could follow up quickly with residents and families</li>
+              <li
+                >Documented maintenance needs, dorm room checks, conduct concerns, and wellness check-ins in
+                <a href="https://www.starrez.com/" target="_blank">StarRez</a></li
+              >
+              <li>Planned community activities and organized group walks to campus events to engage residents in campus life</li>
             </ul>
           </div>
           <!-- END: Residential Advisor -->
@@ -330,10 +363,7 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li
-                >Orchestrated the Region VI Student LeadOn by shaping the agenda, recruiting presenters, and aligning logistics with the host
-                campus</li
-              >
+              <li>Orchestrated the Student LeadOn by shaping the agenda, recruiting presenters, and communicating with the host campus</li>
               <li
                 >Facilitated monthly strategy briefings with state student leaders to surface campus recreation challenges and present actionable
                 updates to the regional board</li
