add new utility classes for max-width, background, padding, and shadow styles in CSS; update resume layout with improved dimensions and print styles

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -12,9 +12,9 @@
   </head>
 
   <body
-    class="resume layout relative mx-auto h-full max-w-[780px] pb-80 pt-10 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm">
+    class="resume layout relative mx-auto h-full max-w-[9.75in] pb-80 pt-10 font-serif text-xs selection:bg-cyan-500/75 selection:text-white print:max-w-[700px] print:pb-0 print:pt-0 print:text-xs xs:text-sm bg-gray-50/80 print:bg-white">
     <!-- START: Page -->
-    <div class="flex flex-col gap-y-2 print:gap-y-[3px]">
+    <div class="flex flex-col gap-y-2 print:gap-y-[3px] bg-white print:bg-transparent px-20 py-14 print:p-0 shadow-lg print:shadow-none">
       <!-- START: Header -->
       <section id="header" class="flex flex-col -space-y-0.5 text-center">
         <h1 class="text-xl font-bold print:text-base">Jake Harvanchik</h1>
