improved the case play project bullets; change projects dates to years only

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -756,14 +756,20 @@
                 </p>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">January 2023</p>
-                <p class="xs:hidden">Jan. '23</p>
+                <p class="hidden xs:inline">2023</p>
+                <p class="xs:hidden">'23</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Designed a web application to store and showcase sports case plays</li>
-              <li>Used for officials' trainings and personal practice for upcoming tournaments</li>
-              <!-- <li>Has the ability to add unlimited case plays for any and all sports</li> -->
+              <li>Architected a centralized database, converting scattered PDFs and rulebooks into a searchable, cloud-based library</li>
+              <li
+                >Engineered an high performance, minimal latency, and interactive training tool featuring video integration and "hover-to-reveal"
+                functionality, allowing trainers to facilitate active case play review</li
+              >
+              <li
+                >Crowdsourced a growing repository of complex officiating scenarios by implementing user-submission features, fostering a
+                collaborative community for campus recreation professionals to share and vet challenging case plays</li
+              >
             </ul>
           </div>
           <!-- END: Case Play Database -->
@@ -782,15 +788,13 @@
                 >
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">January 2023</p>
-                <p class="xs:hidden">Jan. '23</p>
+                <p class="hidden xs:inline">2023</p>
+                <p class="xs:hidden">'23</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li
-                >Developed a responsive training simulator that generates infinite, randomized flag football game scenarios for officials to practice
-                penalty enforcement and announcement</li
-              >
+              <li>Developed a responsive training simulator that generates infinite, randomized flag football game scenarios</li>
+              <li>Programmed a training tool for officials to practice penalty enforcements and announcements</li>
               <li>Codified complex rule sets into a programmable logic engine covering down-and-distance, penalties, and timing nuances</li>
               <li>Deployed the tool publicly so students can access it anywhere when preparing for upcoming tournaments</li>
               <li>Translated officiating expertise into an interactive technical solution that reinforces rapid decision making</li>
@@ -811,8 +815,8 @@
                 </p>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">October 2022</p>
-                <p class="xs:hidden">Oct. '22</p>
+                <p class="hidden xs:inline">2022</p>
+                <p class="xs:hidden">'22</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
@@ -837,8 +841,8 @@
                 </p>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August - November 2021</p>
-                <p class="xs:hidden">Aug. - Nov. '21</p>
+                <p class="hidden xs:inline">2021</p>
+                <p class="xs:hidden">'21</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
@@ -865,8 +869,8 @@
                 </p>
               </div>
               <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">December 2014 - Present</p>
-                <p class="xs:hidden">Dec. '14 - Pres.</p>
+                <p class="hidden xs:inline">2014 - 2025</p>
+                <p class="xs:hidden">'14 - '25</p>
               </div>
             </div>
             <ul class="ml-5 list-disc">
