add new roles for Summer Camp Counselor and Intramural Sports Supervisor; enhance job descriptions for clarity and detail; update existing Summer Camp Counselor entry for consistency

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -244,6 +244,40 @@
             </ul>
           </div>
           <!-- END: Software Developer (Contract) -->
+
+          <!-- START: Summer Camp Counselor -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Summer Camp Counselor</p>
+                <a href="https://www.fullerton.edu/" target="_blank" class="italic">California State University, Fullerton</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">June 2022 - August 2022</p>
+                <p class="xs:hidden">Jun. '22 - Aug. '22</p>
+                <p>Fullerton, CA</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li
+                >Led daily sports and game rotations (kickball, relay races, basketball skills) for 40+ campers, adapting instruction to varying
+                experience levels</li
+              >
+              <li
+                >Managed equipment, hydration breaks, and safety protocols during gym sessions and outdoor field trips across campus recreation
+                venues</li
+              >
+              <li
+                >Coached campers through post-game reflections to reinforce resilient sportsmanship, helping them celebrate wins respectfully and
+                learn from losses</li
+              >
+              <li
+                >Partnered with fellow counselors to design balanced indoor/outdoor schedules that maximized activity time and inclusive
+                participation</li
+              >
+            </ul>
+          </div>
+          <!-- END: Summer Camp Counselor -->
           <!-- START: Intramural Sports Official -->
           <div class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -283,7 +317,7 @@
                 <a href="https://tailwindcss.com/" target="_blank">Tailwind CSS</a>, pairing modern layout systems with SEO and accessibility best
                 practices to improve engagement</li
               >
-              <li>Built a custom greenhouse inventory application (<a href="#project-green-house">detailed below</a>)</li>
+              <li>Built a custom greenhouse inventory application (<a href="#project-green-house">detailed in projects section</a>)</li>
               <li>Configured backend services for database retrievals using Apache, Tomcat, REST, and MySQL</li>
               <li>Participated in teleconferences with agriculture CEOs and directors and produced the meeting minutes</li>
             </ul>
@@ -312,6 +346,43 @@
             </ul>
           </div>
           <!-- END: Intramural Sports Supervisor -->
+
+          <!-- START: Intramural Sports Supervisor -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Intramural Sports Supervisor</p>
+                <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"
+                  >Oklahoma State University, Department of Wellness</a
+                >
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2019 - March 2020</p>
+                <p class="xs:hidden">Aug. '19 - March '20</p>
+                <p>Stillwater, OK</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li
+                >Contributed to classroom and on-court/field training clinics, accelerating official growth through real-time verbal feedback and
+                detailed written evaluations</li
+              >
+              <li
+                >Directed nightly program logistics and utilized IMLeagues to verify player eligibility and check in players into their intramural
+                contents</li
+              >
+              <li
+                >Administered immediate first aid for injuries and utilized Connect2 software to document accidents, incidents, and ejections in
+                compliance with safety protocols</li
+              >
+              <li
+                >Served as the primary on-site authority to de-escalate volatile disputes between teams, employing effective communication to resolve
+                high-stress situations</li
+              >
+              <li>Officiated faculty/staff leagues, demonstrating composure, respect, and unbiased decision-making</li>
+            </ul>
+          </div>
+          <!-- END: Intramural Sports Supervisor -->
           <!-- START: Residential Advisor -->
           <div class="flex-col gap-y-1">
             <div class="flex flex-row justify-between">
@@ -328,10 +399,7 @@
             <ul class="ml-5 list-disc">
               <li>Supported 50 residents by coordinating move-ins, leading floor meetings, and mediating roommate conflicts</li>
               <li>Served on nightly duty rotations and responded to urgent calls from residents and campus police</li>
-              <li
-                >Guided students through sensitive incidents involving drugs, alcohol, and loud gatherings by calmly de-escalating and connecting them
-                with campus resources</li
-              >
+              <li>Guided students through sensitive incidents involving drugs or alcohol by de-escalating and sharing campus resources</li>
               <li>Captured detailed, objective incident reports so professional staff could follow up quickly with residents and families</li>
               <li
                 >Documented maintenance needs, dorm room checks, conduct concerns, and wellness check-ins in
@@ -341,8 +409,38 @@
             </ul>
           </div>
           <!-- END: Residential Advisor -->
+          <!-- START: Intramural Sports Official -->
+          <div class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <p class="font-bold">Intramural Sports Official</p>
+                <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"
+                  >Oklahoma State University, Department of Wellness</a
+                >
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">August 2018 - August 2019</p>
+                <p class="xs:hidden">Aug. '18 - Aug. '19</p>
+                <p>Stillwater, OK</p>
+              </div>
+            </div>
+            <ul class="ml-5 list-disc">
+              <li>Officiated a diverse set of sports including flag football, soccer, volleyball, basketball, softball, floor hockey</li>
+              <li
+                >Enforced game integrity and fair play through split-second judgment calls and precise positioning, maintaining control during
+                high-tempo competitive gameplay</li
+              >
+              <li>De-escalated player conflicts by maintaining a professional demeanor and clearly articulating calls to players</li>
+              <li>Collaborated effectively within 2- and 3-person crews, utilizing standard mechanics and non-verbal signals</li>
+              <li
+                >Managed risk and game operations, including pre-game safety inspections, captains' meetings, equipment checks, and immediate injury
+                response protocols</li
+              >
+            </ul>
+          </div>
+          <!-- END: Intramural Sports Official -->
           <!-- START: TODO: Hidden Summer Camp Counselor -->
-          <div class="hidden flex-col gap-y-1">
+          <div class="flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Summer Camp Counselor</p>
@@ -355,11 +453,13 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Supervised groups as large as 50 kids with grades ranging from 1st to 6th</li>
-              <li>Led distant field trips around California (i.e. amusement park, aquarium, zoo, etc.)</li>
-              <li>Programmed daily activities, coordinated snacks and hot lunches, and managed time wisely</li>
-              <li>Encouraged good attitudes and addressed parents of children with behavioral concerns</li>
-              <li>Upheld professionalism and sustained alertness through all hours of the day</li>
+              <li>Supervised and mentored a dynamic group of up to 50 elementary-age children, ensuring safety and a positive experience</li>
+              <li>Facilitated educational and recreational field trips, managing logistics in high-traffic venues such as theme parks and zoos</li>
+              <li>Fostered positive camper development by maintaining open communication with parents regarding behavioral progress</li>
+              <li
+                >Designed and executed engaging daily programming, coordinating schedules, meal distribution, and activity transitions to maximize
+                time and camper participation</li
+              >
             </ul>
           </div>
           <!-- END: Summer Camp Counselor -->
@@ -476,7 +576,9 @@
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <p class="font-bold">Summer Camp Counselor</p>
-                <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic">Cadence Academy (Sunshine)</a>
+                <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic"
+                  >Cadence Academy (Formerly Sunshine)</a
+                >
               </div>
               <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">June 2019 - August 2019</p>
