refine job descriptions for Summer Camp Counselor and Intramural Sports Official; enhance clarity and consistency by streamlining bullet points and updating responsibilities

--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -259,22 +259,10 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li
-                >Led daily sports and game rotations (kickball, relay races, basketball skills) for 40+ campers, adapting instruction to varying
-                experience levels</li
-              >
-              <li
-                >Managed equipment, hydration breaks, and safety protocols during gym sessions and outdoor field trips across campus recreation
-                venues</li
-              >
-              <li
-                >Coached campers through post-game reflections to reinforce resilient sportsmanship, helping them celebrate wins respectfully and
-                learn from losses</li
-              >
-              <li
-                >Partnered with fellow counselors to design balanced indoor/outdoor schedules that maximized activity time and inclusive
-                participation</li
-              >
+              <li>Led daily sports and game rotations for 40+ campers, adapting instruction to varying experience levels</li>
+              <li>Managed equipment, hydration breaks, and safety protocols during indoor and outdoor activities</li>
+              <li>Coached campers to reinforce sportsmanship, helping them celebrate wins respectfully and learn from losses</li>
+              <li>Partnered with fellow counselors to design balanced schedules that maximized activity time and inclusive participation</li>
             </ul>
           </div>
           <!-- END: Summer Camp Counselor -->
@@ -292,8 +280,10 @@
               </div>
             </div>
             <ul class="ml-5 list-disc">
-              <li>Officiated intramural flag football, basketball, soccer, softball, volleyball, and ultimate contests</li>
-              <li>Mentored newly hired officials during on-court situations, reinforcing mechanics and rule knowledge in live-game settings</li>
+              <li>Officiated flag football, basketball, soccer, softball, volleyball, and ultimate contests, adapting to school-specific rules</li>
+              <li>Collected and returned participant ID cards before and after each game to uphold eligibility</li>
+              <li>Mentored fellow officials, reinforcing positioning, whistle timing, judgement, and calm communication with participants</li>
+              <li>Closed nightly operations by coordinating jersey laundry, sanitizing equipment, and resetting courts for open-recreation</li>
             </ul>
           </div>
           <!-- END: Intramural Sports Official -->
