--- a/resume/v2/index.html
+++ b/resume/v2/index.html
@@ -313,29 +313,6 @@
             </ul>
           </div>
           <!-- END: DiD Integration -->
-          <!-- START: Intramural Sports Supervisor -->
-          <div class="hidden flex-col gap-y-1">
-            <div class="flex flex-row justify-between">
-              <div class="flex flex-col">
-                <p class="font-bold">Intramural Sports Supervisor / Official</p>
-                <a href="https://wellness.okstate.edu/competitive-sports" target="_blank" class="italic"
-                  >Oklahoma State University, Department of Wellness</a
-                >
-              </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August 2018 - March 2020</p>
-                <p class="xs:hidden">Aug. '18 - March '20</p>
-                <p>Stillwater, OK</p>
-              </div>
-            </div>
-            <ul class="ml-5 list-disc">
-              <li>Officiated flag football, basketball, volleyball, soccer, softball, and floor hockey</li>
-              <li>Trained new officials in various sports by giving presentations on the rules and individual feedback</li>
-              <li>Addressed unruly players, teams, or crowds and eased overwhelmed officials</li>
-              <li>Operated department software, filled out incident reports, and utilized First Aid/CPR/AED certification</li>
-            </ul>
-          </div>
-          <!-- END: Intramural Sports Supervisor -->
 
           <!-- START: Intramural Sports Supervisor -->
           <div class="flex flex-col gap-y-1">
@@ -429,7 +406,7 @@
             </ul>
           </div>
           <!-- END: Intramural Sports Official -->
-          <!-- START: TODO: Hidden Summer Camp Counselor -->
+          <!-- START: Summer Camp Counselor -->
           <div class="flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
@@ -540,70 +517,9 @@
             </ul>
           </div>
           <!-- END: Secretary -->
-          <!-- START: Residential Advisor -->
-          <div class="hidden flex-col gap-y-1">
-            <div class="flex flex-row justify-between">
-              <div class="flex flex-col">
-                <p class="font-bold">Residential Advisor (RA)</p>
-                <a href="https://reslife.okstate.edu" target="_blank" class="italic">Housing and Residential Life</a>
-              </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">August 2019 - March 2020</p>
-                <p class="xs:hidden">Aug. '19 - March '20</p>
-                <p>Stillwater, OK</p>
-              </div>
-            </div>
-            <ul class="ml-5 list-disc">
-              <li>Oversaw approximately 50 student residents in on-campus housing</li>
-              <li>Responded to urgent requests from residents and on-campus police while on-call at night</li>
-              <li>Defused chaotic situations involving &mdash; but not limited to &mdash; drugs, alcohol, and rowdy parties</li>
-              <li>Recounted in great detail incidents within the housing community for the purpose of filing reports</li>
-            </ul>
-          </div>
-          <!-- END: Residential Advisor -->
-          <!-- START: TODO: Hidden Summer Camp Counselor -->
-          <div class="hidden flex-col gap-y-1">
-            <div class="flex flex-row justify-between">
-              <div class="flex flex-col">
-                <p class="font-bold">Summer Camp Counselor</p>
-                <a href="https://www.cadence-education.com/locations/ca/valencia/651" target="_blank" class="italic"
-                  >Cadence Academy (Formerly Sunshine)</a
-                >
-              </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">June 2019 - August 2019</p>
-                <p class="xs:hidden">June '19 - Aug. '19</p>
-                <p>Valencia, CA</p>
-              </div>
-            </div>
-            <ul class="ml-5 list-disc">
-              <li>Supervised groups as large as 50 kids with grades ranging from 1st to 6th</li>
-              <li>Led distant field trips around California (i.e. amusement park, aquarium, zoo, etc.)</li>
-              <li>Programmed daily activities, coordinated snacks and hot lunches, and managed time wisely</li>
-              <li>Encouraged good attitudes and addressed parents of children with behavioral concerns</li>
-              <li>Upheld professionalism and sustained alertness through all hours of the day</li>
-            </ul>
-          </div>
-          <!-- END: Summer Camp Counselor -->
         </div>
       </section>
       <!-- END: Organizations -->
-
-      <!-- START: Soft Skills -->
-      <section hidden id="technical-skills">
-        <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Soft Skills</h2>
-        <div class="flex flex-col gap-y-1.5">
-          <ul class="ml-5 w-full list-disc columns-6 gap-x-11 print:gap-x-7">
-            <li>Versatile</li>
-            <li>Responsible</li>
-            <li>Organized</li>
-            <li>Reliable</li>
-            <li>Professional</li>
-            <li>Disciplined</li>
-          </ul>
-        </div>
-      </section>
-      <!-- END: Soft Skills -->
 
       <!-- START: Accolades -->
       <section id="accolades">
@@ -778,31 +694,12 @@
       <section id="certifications">
         <h2 class="mb-[5px] w-full border-b border-black font-bold uppercase tracking-wider">Certifications</h2>
         <div class="flex flex-col gap-y-1.5">
-          <!-- START: RTE Certification -->
-          <!--
-          <div id="rte-cert" class="flex flex-col gap-y-1">
-            <div class="flex flex-row justify-between">
-              <div class="flex flex-col">
-                <a href="https://drive.google.com/file/d/1AXV2w9brTAvHU9GESCIXHWNN0_lhdDxi/view?usp=sharing" target="_blank" class="font-bold"
-                  >Responding to Emergencies Adult and Pediatric First Aid/CPR
-                </a>
-                <a href="https://www.cpp.edu/" target="_blank" class="italic">Cal Poly Pomona</a>
-              </div>
-              <div class="flex min-w-max flex-col text-right">
-                <p class="hidden xs:inline">March 2023 - 2025</p>
-                <p class="xs:hidden">Mar. '23 - '25</p>
-              </div>
-            </div>
-          </div>
-          -->
-          <!-- END: RTE Certification -->
-
           <!-- START: Adult Mental Health First Aid -->
           <div id="mhfa-cert" class="flex flex-col gap-y-1">
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <a href="https://www.mentalhealthfirstaid.org/" target="_blank" class="font-bold">Adult Mental Health First Aid</a>
-                <a href="https://www.mentalhealthfirstaid.org/" target="_blank" class="italic">Mental Health First Aid</a>
+                <a href="https://www.mentalhealthfirstaid.org/" target="_blank" class="italic">University of Mississippi, Mental Health First Aid</a>
               </div>
               <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">August 2028</p>
@@ -817,7 +714,7 @@
             <div class="flex flex-row justify-between">
               <div class="flex flex-col">
                 <a href="https://www.redcross.org/take-a-class/teach" target="_blank" class="font-bold">First Aid/CPR/AED Instructor </a>
-                <a href="https://www.redcross.org/" target="_blank" class="italic">American Red Cross</a>
+                <a href="https://www.redcross.org/" target="_blank" class="italic">University of Mississippi, American Red Cross</a>
               </div>
               <div class="flex min-w-max flex-col text-right">
                 <p class="hidden xs:inline">January 2027</p>
@@ -826,6 +723,25 @@
             </div>
           </div>
           <!-- END: American Red Cross CPR Instructor -->
+
+          <!-- START: RTE Certification -->
+
+          <div id="rte-cert" class="flex flex-col gap-y-1">
+            <div class="flex flex-row justify-between">
+              <div class="flex flex-col">
+                <a href="https://drive.google.com/file/d/1AXV2w9brTAvHU9GESCIXHWNN0_lhdDxi/view?usp=sharing" target="_blank" class="font-bold"
+                  >Responding to Emergencies Adult and Pediatric First Aid/CPR
+                </a>
+                <a href="https://www.cpp.edu/" target="_blank" class="italic">Cal Poly Pomona, American Red Cross</a>
+              </div>
+              <div class="flex min-w-max flex-col text-right">
+                <p class="hidden xs:inline">March 2025</p>
+                <p class="xs:hidden">Mar. '25</p>
+              </div>
+            </div>
+          </div>
+
+          <!-- END: RTE Certification -->
         </div>
       </section>
       <!-- END: Certifications -->
